Add programmer block

--- a/src/main/resources/assets/simpleprocessors/lang/en_US.lang
+++ b/src/main/resources/assets/simpleprocessors/lang/en_US.lang
@@ -1,1 +1,3 @@
 itemGroup.simpleprocessors=Simple Processors
+tile.simpleprocessors.programmer.name=Programmer
+tooltip.simpleprocessors.block.programmer.name=You compressed a 0.5m^3 plank into a black hole.
