--- a/src/main/resources/assets/simpleprocessors/lang/en_US.lang
+++ b/src/main/resources/assets/simpleprocessors/lang/en_US.lang
@@ -1,5 +1,8 @@
 itemGroup.simpleprocessors=Simple Processors
 tile.simpleprocessors.programmer.name=Programmer
 tooltip.simpleprocessors.block.programmer.name=Refines coffee into code.
-tooltip.simpleprocessors.programmer.tab.insert.name=Insert processor
-tooltip.simpleprocessors.programmer.tab.modules.name=Setup modules
+tooltip.simpleprocessors.programmer.tab.insert.name=Upload Code
+tooltip.simpleprocessors.programmer.tab.browser.name=Code Editor
+tooltip.simpleprocessors.programmer.tab.modules.name=Minecraft Package Manager
+button.simpleprocessors.programmer.tab.modules.upload.name=Upload
+button.simpleprocessors.programmer.tab.modules.format.name=Format
