Add text for when no item inserted, fix guitop/left

--- a/src/main/resources/assets/simpleprocessors/lang/en_US.lang
+++ b/src/main/resources/assets/simpleprocessors/lang/en_US.lang
@@ -4,5 +4,6 @@ tooltip.simpleprocessors.block.programmer.name=Refines coffee into code.
 tooltip.simpleprocessors.programmer.tab.insert.name=Upload Code
 tooltip.simpleprocessors.programmer.tab.browser.name=Code Editor
 tooltip.simpleprocessors.programmer.tab.modules.name=Minecraft Package Manager
-button.simpleprocessors.programmer.tab.modules.upload.name=Upload
-button.simpleprocessors.programmer.tab.modules.format.name=Format
+button.simpleprocessors.programmer.tab.insert.upload.name=Upload
+button.simpleprocessors.programmer.tab.insert.format.name=Format
+label.simpleprocessors.programmer.tab.insert.insertproc.name=Insert Processor
