Add tuberous processor, fix lang

--- a/src/main/resources/assets/simpleprocessors/lang/en_US.lang
+++ b/src/main/resources/assets/simpleprocessors/lang/en_US.lang
@@ -11,6 +11,7 @@ label.simpleprocessors.programmer.tab.insert.insertproc.name=Insert Processor
 
 item.simpleprocessors.processor.name=Processor
 tooltip.simpleprocessors.item.processor.name=Processes code.
-item.simpleprocessors.processor_0.name=Iron Processor
-item.simpleprocessors.processor_1.name=Gold Processor
-item.simpleprocessors.processor_2.name=Diamond Processor
+item.simpleprocessors.processor_0.name=Tuberous Processor
+item.simpleprocessors.processor_1.name=Iron Processor
+item.simpleprocessors.processor_2.name=Gold Processor
+item.simpleprocessors.processor_3.name=Diamond Processor
