Add more processors

--- a/src/main/resources/assets/simpleprocessors/lang/en_US.lang
+++ b/src/main/resources/assets/simpleprocessors/lang/en_US.lang
@@ -14,8 +14,14 @@ item.simpleprocessors.processor_0.name=Tuberous Processor
 item.simpleprocessors.processor_1.name=Iron Processor
 item.simpleprocessors.processor_2.name=Gold Processor
 item.simpleprocessors.processor_3.name=Diamond Processor
+item.simpleprocessors.processor_4.name=Iron Block Processor
+item.simpleprocessors.processor_5.name=Gold Block Processor
+item.simpleprocessors.processor_6.name=Diamond Block Processor
 tooltip.simpleprocessors.item.processor.name=Processes code.
 tooltip.simpleprocessors.item.processor_0.name=Somehow, you got a potato to process code.
-tooltip.simpleprocessors.item.processor_1.name=Processes code.
-tooltip.simpleprocessors.item.processor_2.name=Processes code.
-tooltip.simpleprocessors.item.processor_3.name=Processes code.
+tooltip.simpleprocessors.item.processor_1.name=Don't let it get wet, or it'll be able to play unfinished prerelease games.
+tooltip.simpleprocessors.item.processor_2.name=Gold tipped processors for improved signal quality - Advanced Minecraft Devices.
+tooltip.simpleprocessors.item.processor_3.name=You turned diamonds into graphite.
+tooltip.simpleprocessors.item.processor_4.name=Turns out 9-way SLI only provides 4 times the performance. It scales really well.
+tooltip.simpleprocessors.item.processor_5.name=Turns out 9-way SLI only provides 4 times the performance. It scales really well.
+tooltip.simpleprocessors.item.processor_6.name=Turns out 9-way SLI only provides 4 times the performance. It scales really well.
