Specific tooltip/name for invalid items

--- a/src/main/resources/assets/simpleprocessors/lang/en_US.lang
+++ b/src/main/resources/assets/simpleprocessors/lang/en_US.lang
@@ -1,4 +1,6 @@
 itemGroup.simpleprocessors=Simple Processors
+item.simpleprocessors.invalid.name=Invalid Item!
+tooltip.simpleprocessors.item.invalid.name=This won't do anything. How did you get this?!
 
 tile.simpleprocessors.programmer.name=Programmer
 tooltip.simpleprocessors.block.programmer.name=Refines coffee into code.
