Change tooltips, add Linus' Special Screwdriver

--- a/src/main/resources/assets/simpleprocessors/lang/en_US.lang
+++ b/src/main/resources/assets/simpleprocessors/lang/en_US.lang
@@ -11,7 +11,6 @@ button.simpleprocessors.programmer.tab.insert.upload.name=Upload
 button.simpleprocessors.programmer.tab.insert.format.name=Format
 label.simpleprocessors.programmer.tab.insert.insertproc.name=Insert Processor
 
-item.simpleprocessors.processor.name=Processor
 item.simpleprocessors.processor_0.name=Tuberous Processor
 item.simpleprocessors.processor_1.name=Iron Processor
 item.simpleprocessors.processor_2.name=Gold Processor
@@ -19,14 +18,13 @@ item.simpleprocessors.processor_3.name=Diamond Processor
 item.simpleprocessors.processor_4.name=Iron Block Processor
 item.simpleprocessors.processor_5.name=Gold Block Processor
 item.simpleprocessors.processor_6.name=Diamond Block Processor
-tooltip.simpleprocessors.item.processor.name=Processes code.
-tooltip.simpleprocessors.item.processor_0.name=Somehow, you got a potato to process code.
-tooltip.simpleprocessors.item.processor_1.name=Don't let it get wet, or it'll be able to play unfinished prerelease games.
-tooltip.simpleprocessors.item.processor_2.name=Gold tipped processors for improved signal quality - Advanced Minecraft Devices.
-tooltip.simpleprocessors.item.processor_3.name=You turned diamonds into graphite.
-tooltip.simpleprocessors.item.processor_4.name=Turns out 9-way SLI only provides 4 times the performance. It scales really well.
-tooltip.simpleprocessors.item.processor_5.name=Turns out 9-way SLI only provides 4 times the performance. It scales really well.
-tooltip.simpleprocessors.item.processor_6.name=Turns out 9-way SLI only provides 4 times the performance. It scales really well.
+tooltip.simpleprocessors.item.processor_0.name=Aaaa! Bird!
+tooltip.simpleprocessors.item.processor_1.name=Don't let it get wet, or it'll be able to play unfinished "Early Access" games.
+tooltip.simpleprocessors.item.processor_2.name=Gold tipped processors for improved signal quality - Advanced Minecraft Devices
+tooltip.simpleprocessors.item.processor_3.name=Single die implementation maximises performance - Minetel
+tooltip.simpleprocessors.item.processor_4.name=Hey look! It's SLI!
+tooltip.simpleprocessors.item.processor_5.name=The storage from the 21 chips are arranged in RAID 50 for redundancy.
+tooltip.simpleprocessors.item.processor_6.name=Your processor gets called "10 glued-together desktop dies" by Minetel
 tooltip.simpleprocessors.item.processor.storage.name=Storage
 tooltip.simpleprocessors.item.processor.addon.name=Addon Card Slots
 
@@ -34,5 +32,7 @@ item.simpleprocessors.solderingiron.name=Soldering Iron
 tooltip.simpleprocessors.item.solderingiron.name=You compressed a 0.5m^3 plank into a black hole.
 item.simpleprocessors.ducttape.name=Duct Tape
 tooltip.simpleprocessors.item.ducttape.name=Duct Tape solves everything!
-item.simpleprocessors.screwdriver.name=Screwdriver
-tooltip.simpleprocessors.item.screwdriver.name=It's a flat-head, but it also fits in most Philips head screws.
+item.simpleprocessors.screwdriver_0.name=Screwdriver
+tooltip.simpleprocessors.item.screwdriver_0.name=It's a flat-head, but it also fits in most Philips head screws.
+item.simpleprocessors.screwdriver_1.name=Linus' Special Screwdriver
+tooltip.simpleprocessors.item.screwdriver_1.name=Orange and cool.
