Add charred stone and fix screwdriver

--- a/src/main/resources/assets/simpleprocessors/lang/en_US.lang
+++ b/src/main/resources/assets/simpleprocessors/lang/en_US.lang
@@ -36,3 +36,5 @@ item.simpleprocessors.screwdriver_0.name=Screwdriver
 tooltip.simpleprocessors.item.screwdriver_0.name=It's a flat-head, but it also fits in most Philips head screws.
 item.simpleprocessors.screwdriver_1.name=Linus' Special Screwdriver
 tooltip.simpleprocessors.item.screwdriver_1.name=Orange and cool.
+
+tile.simpleprocessors.charredstone.name=Charred Stone
