Fix coordinates for slots, add more lang, add not bootable tooltip

--- a/src/main/resources/assets/simpleprocessors/lang/en_US.lang
+++ b/src/main/resources/assets/simpleprocessors/lang/en_US.lang
@@ -41,3 +41,8 @@ tooltip.simpleprocessors.item.screwdriver_1.name=Orange and cool.
 item.simpleprocessors.processorsocket.name=Processor Socket
 
 tile.simpleprocessors.charredstone.name=Charred Stone
+
+tile.simpleprocessors.simplecase.name=Simple Case
+tooltip.simpleprocessors.case.notbootable=Must be programmed first!
+
+item.simpleprocessors.addoncard_0.name=Addon Card
